--- a/WebDev/Basics/LTAP.html
+++ b/WebDev/Basics/LTAP.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Linking to another page</title>
 </head>
 <body>
-    Hayy
+    <main>
+        <nav>
+            <h3>Industrialist</h3>
+            <div class="links">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Contact us</a>
+            <a href="#">Pricing</a>
+            </div>
+        </nav>
+    </main>
 </body>
 </html>
