--- a/WebDev/Basics/index.html
+++ b/WebDev/Basics/index.html
@@ -69,5 +69,21 @@
     <p>Overall, semantic tags play a crucial role in creating well-structured, accessible, and SEO-friendly web pages. They provide a clear and meaningful way to organize content, making it easier for both users and search engines to navigate and understand the information presented.</p>
     <br><br>
     <h2>Semantic tags khud hi batata hai ki wou elements kya karega</h2>
+    <br><br>
+    header: Pehla section of website can be called header.
+    <br>
+    nav : Navigation section.
+    <br>
+    main : poori website isime aayegi.
+    <br>
+    Section : pages of websites.
+    <br>
+    article : Website ke ander jo bhi sub elements hoge unhe articles mein daal sakhte hai.
+    <br>
+    aside : side mein usually jou fixed elements hote hai unke liye use hota hai.
+    <br>
+    footer : last section of websites.
+    <br>
+    
 </body>
 </html>
