--- a/WebDev/Basics/alevelup.html
+++ b/WebDev/Basics/alevelup.html
@@ -8,9 +8,23 @@
 </head>
 <body>
     <div class="box">
-        <img src="https://www.lummi.ai/api/render/image/754adcd3-692e-4794-8e86-82aa47503c85?token=eyJhbGciOiJIUzI1NiJ9.eyJpZCI6Ijc1NGFkY2QzLTY5MmUtNDc5NC04ZTg2LTgyYWE0NzUwM2M4NSIsImRvd25sb2FkU2l6ZSI6Im1lZGl1bSIsInJlbmRlclNwZWNzIjp7ImVmZmVjdHMiOnsicmVmcmFtZSI6e319fSwic2hvdWxkQXV0b0Rvd25sb2FkIjpmYWxzZSwianRpIjoiZVhBX3Y4Y3FueVZiaDhlRElqRDE5IiwiaWF0IjoxNzUyMzMzMDAwLCJleHAiOjE3NTIzMzMwNjB9.x_AN_gedbaatWKhFoVEWcBj268U3WawlzWHmTOZjQDg" alt="inside image">
+        <img src="Golden Retriever Portrait.png" alt="inside image">
     </div>
-    <div class="box2">
+    <!-- <div class="box2">
+        <div class="innerboxchild">
+
+        </div>
+    </div> -->
+    <div class="box3">
+        <div class="textes">
+            <div class="text-box">
+                <div class="under-text">
+                    <p>Hlo,Sheru is a Golden Retriever. He is very cute and playful. He loves to play with his toys and enjoys long walks in the park. Sheru is also very friendly and gets along well with other dogs and people. His favorite food is chicken, and he loves to chase after balls. Sheru is a loyal companion and brings joy to everyone around him.</p>
+                    </p>
+                </div>
+
+            </div>
+        </div>
 
     </div>
 </body>
