--- a/WebDev/Basics/alevelup.html
+++ b/WebDev/Basics/alevelup.html
@@ -26,6 +26,22 @@
             </div>
         </div>
 
+        <div class="deco">
+
+        </div>
+
+        <div class="deco2">
+            <p>$</p>
+            <p>$</p>
+        </div>
+
+        <div class="deco3">
+            <div class="sphere1"></div>
+            <!-- <div class="sphere2"></div> -->
+            <!-- <div class="sphere3"></div> -->
+        </div>
+
     </div>
+
 </body>
 </html>
