--- a/WebDev/Basics/alevelup.html
+++ b/WebDev/Basics/alevelup.html
@@ -45,7 +45,24 @@
 
 
     <section>
-
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
+        <div class="dabba"></div>
     </section>
 
 </body>
