--- a/WebDev/MasteringCSS/index.html
+++ b/WebDev/MasteringCSS/index.html
@@ -9,6 +9,23 @@
 <body>
     <div class="box">
         <div class="con1"></div>
+        <div class="con2">
+            <div class="subcon2">
+                <h1>Robo AI</h1>
+                <p>Welcome to the future of AI technology. Explore the capabilities of our advanced humanoid robots.</p>
+                <div class="imagecon">
+                    <img src="https://images.unsplash.com/photo-1683530322037-a937a55051ea?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Image Robo AI">
+                </div>    
+                <button>Learn More</button>
+            
+            </div>
+
+        </div>
     </div>
+
+    <div class="page2">
+        <div class="con3"></div>
+    </div>
+
 </body>
 </html>
