--- a/WebDev/MasteringCSS/Grid/smallproj/index.html
+++ b/WebDev/MasteringCSS/Grid/smallproj/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
     <title>Simple layout using grid</title>
 </head>
 <body>
@@ -14,11 +15,32 @@
     </main> -->
 
     <main>
-        <div class="left-top-left"></div>
-        <div class="left-top-right"></div>
-        <div class="left-center"></div>
-        <div class="left-bottom"></div>
-        <div class="right"></div>
+        <div class="left-top-left">
+            <div class="square"></div>
+        </div>
+        <div class="left-top-right">
+            <h4>Menu</h4>
+            <h5>Home Page</h5>
+            <h5>Portfolio</h5>
+            <h5>Fashion Week</h5>
+            <h5>News/Articles</h5>
+            <h5>Contact</h5>
+        </div>
+        <div class="left-center">
+            <h1>Select</h1>
+            <h1>Fashion</h1>
+            <h1>Mod.05 -</h1>
+            <h1>Scene</h1>
+        </div>
+        <div class="left-bottom">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta, facere ut porro similique mollitia inventore unde accusantium eum ratione ipsum id dolore, fuga corrupti recusandae ipsam. Commodi, ratione ab! Nostrum.</p>
+        </div>
+        <div class="right">
+            <video autoplay loop muted src="./Demos.mp4">Video of demo</video>
+        </div>
+        <div class="arrow">
+            <i class="ri-arrow-right-line"></i>
+        </div>
     </main>
 
 </body>
