--- a/WebDev/CSS_Projects/Premier/index.html
+++ b/WebDev/CSS_Projects/Premier/index.html
@@ -10,12 +10,32 @@
 <body>
     <div id="main">
         <div id="nav">
-            <h1>Premier</h1>
+            <h1>premier</h1>
             <h2>Models</h2>
-            <h2>Women/Men</h2>
-            <h2>Agency/Blog/Information</h2>
+            <h2>Women / Men</h2>
+            <h2>Agency / Blog / Information</h2>
             <h2><i class="ri-search-line"></i></h2>
 
+        </div>
+
+        <div id="center">
+            <div id="content">
+                <video autoplay loop muted src="./Dior video.mp4">Dior video</video>
+                <div id="overlay">
+                    <div id="over1">
+                        <h1>photography <br>and films</h1>
+                        <h2>01</h2>
+                    </div>
+                    <div id="over2">
+                        <h4>Explore</h4>
+                        <img src="./icons8-arrow-100 (2).png" alt="Icon">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="scroll">
+            
         </div>
     </div>
 </body>
