--- a/WebDev/CSS_Projects/Premier/index.html
+++ b/WebDev/CSS_Projects/Premier/index.html
@@ -118,7 +118,14 @@
         </div>
 
         <div id="page2">
-            
+            <div id="page2-part1"></div>
+            <div id="page2-part2">
+                <img src="./images/Vibrant Fashion Portrait.png" alt="modelss imagess">
+                <div id="innertextp2">
+                    <h5>Hannah Motler features in a fashion story by the lake for Vogue new shot</h5>
+                    <p>such exposures to the fashion and beauty industries enabled her passion for branding and creativity to transition from one side of the camera to the other.</p>
+                </div>
+            </div>
         </div>
 
     </div>
