--- a/CP/Javascript/Intro and basics/Basic/Index.html
+++ b/CP/Javascript/Intro and basics/Basic/Index.html
@@ -9,6 +9,11 @@
 <body>
    
     <button>CLick me</button>
+
+    <div id="parent">
+        <button id="play">Play</button>
+        <button id="pause">Pause</button>
+    </div>
     
     <script src="script.js"></script>
 </body>
