--- a/CP/Javascript/Intro and basics/DOM/index.html
+++ b/CP/Javascript/Intro and basics/DOM/index.html
@@ -12,18 +12,23 @@
 
         <section class="page1">
 
-            <img class="ims1" src="https://images.unsplash.com/photo-1528360983277-13d401cdc186?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="first image">
+            <div class="underp1">
+                <img class="ims1" src="https://images.unsplash.com/photo-1528360983277-13d401cdc186?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="first image">
 
-            <h3 class="underims1">Osaka,Japan</h3>
+                <h3 class="underims1">Osaka,Japan</h3>
+            </div>
 
-            <img id="ims2" src="https://images.unsplash.com/photo-1707026363393-8fe5f087493d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="second image">
+            <div class="underp2">
+                <img class="ims2" src="https://images.unsplash.com/photo-1707026363393-8fe5f087493d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="second image">
 
-            <h3 class="underims2">Osaka Urban Nights,Japan</h3>            
+                <h3 class="underims2">Osaka Urban Nights,Japan</h3> 
+            </div>
+           
         </section>
 
 
 
-        <h1 id="head5">Lorem ipsum dolor sit amet.</h1>
+        <h1 class="head1">Lorem ipsum dolor sit amet.</h1>
 
     </main>
   
