--- a/CP/Javascript/Intro and basics/DOM_Advance/practicewithDOM/index.html
+++ b/CP/Javascript/Intro and basics/DOM_Advance/practicewithDOM/index.html
@@ -7,7 +7,12 @@
     <title>DOM Questions Practicing</title>
 </head>
 <body>
-
+    <h3 class="hs3"></h3>
+    <form>
+        <input class="innp1" type="text">
+        <input class="innp2" type="text">
+        <input type="submit">
+    </form>
     
     <script src="script.js"></script>
 </body>
