--- a/WebDev/DOM by Sarthak sensei/First lec/index.html
+++ b/WebDev/DOM by Sarthak sensei/First lec/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="styl"> -->
+    <link rel="stylesheet" href="style.css">
     <title>DOM</title>
 </head>
 <body>
-    
+    <div class="torch"></div>
+    <div class="torch"></div>
+    <div class="torch"></div>
+    <div class="torch"></div>
     
     <script src="script.js"></script>
 </body>
