--- a/WebDev/DOM by Sarthak sensei/First lec/index.html
+++ b/WebDev/DOM by Sarthak sensei/First lec/index.html
@@ -11,6 +11,8 @@
     <div class="torch"></div>
     <div class="torch"></div>
     <div class="torch"></div>
+
+    <div id="container"></div>
     
     <script src="script.js"></script>
 </body>
