--- a/CP/Javascript/Intro and basics/DOM_Advance/practicewithDOM/index.html
+++ b/CP/Javascript/Intro and basics/DOM_Advance/practicewithDOM/index.html
@@ -17,6 +17,10 @@
     <ul>
         
     </ul>
+
+    <h4>0</h4>
+    <button>Start</button>
+    <button>Stop</button>
     
     <script src="script.js"></script>
 </body>
