--- a/WebDev/GSAP/Gsap_Projects/Landpage1/index.html
+++ b/WebDev/GSAP/Gsap_Projects/Landpage1/index.html
@@ -15,11 +15,22 @@
                 <h3>Instagram</h3>
                 <h3>Gallery</h3>
                 <h3>Contact</h3>
+                <!-- <h3 id="navve">Socials</h3> -->
             </div>
+            <h3 id="navve">Socials</h3>
         </div>
         <h1>Hello I'm</h1>
-        <h1>Hyeeshred aka</h1>
-        <h1>Om Panpatil</h1>
+        <h1>Hyeeshred</h1>
+        <h1>-Om</h1>
+        <img id="image4" src="./image/WAF.jpg" alt="Waf image">
+        <img id="image3" src="./image/Abs.jpg" alt="Abs image">
+        <img id="image2" src="./image/Sunpost.jpg" alt="Sunpost image">
+        <img id="image1" src="./image/Logo.jpg" alt="Logo image">
+        
+        <div id="foot">
+            <p id="namee">Hyeeshred</p>
+            <p id="basee">A Calisthenics athlete & Coder <br> Based in India</p>
+        </div>
     </div>
 
 
