--- a/WebDev/GSAP/Gsap_Projects/Landpage2/index.html
+++ b/WebDev/GSAP/Gsap_Projects/Landpage2/index.html
@@ -11,16 +11,26 @@
     <main>
         <section id="page1">
             <nav>
-                <img id="logo" src="https://wethinkelastic.com/assets/favicon/favicon.png" alt="logo">
+                <img id="logo" src="./images/HLogo.png" alt="logo">
                 <h3>Projects</h3>
                 <h3>Expertise</h3>
                 <h3>The team</h3>
                 <h3>Contact</h3>
             </nav>
+            <!-- <p>hello</p> -->
+            <div id="hero">
+                <p>hello</p>
+
+            </div>
+            <!-- <div id="hero">
+                <h2>hello</h2>
+            </div> -->
         </section>
     </main>
    
-    
+    <!-- cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!--  -->
     <script src="script.js"></script>
 </body>
 </html>
