--- a/WebDev/GSAP/Gsap_Projects/Landpage2/index.html
+++ b/WebDev/GSAP/Gsap_Projects/Landpage2/index.html
@@ -19,13 +19,23 @@
             </nav>
             <!-- <p>hello</p> -->
             <div id="hero">
-                <p>hello</p>
+                <p id="under-hero">hello</p>
 
             </div>
             <!-- <div id="hero">
                 <h2>hello</h2>
             </div> -->
         </section>
+
+        <!-- <section id="page2">
+            <p>We are the team <br> We Think Elastic</p>
+        </section>
+
+        <section id="page3">
+
+        </section> -->
+
+        
     </main>
    
     <!-- cdn -->
