--- a/WebDev/Aggresive Practice HCSS/Letsgo/SmallProj1/index.html
+++ b/WebDev/Aggresive Practice HCSS/Letsgo/SmallProj1/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://framerusercontent.com/images/U07AsvVKwVsSMuFrIdeV15pXmbI.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Arik - Portfolio Framer Template</title>
 </head>
 <body>
-    
+    <main>
+        <section id="Landingpage">
+            <img src="./images/Hero.png" alt="Hero image">
+            <h1>Web Designer <br> <em>& Developer</em></h1>
+            <p>Premium Web Design, Development, and SEO services to help your business stand out.</p>
+        </section>
+    </main>
 </body>
 </html>
